<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Magazoo</string>
    <string name="facebook_app_id">1561514127227022</string>
    <string name="fb_login_protocol_scheme" tools:ignore="MissingTranslation">fb1561514127227022</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nothing" />

    <string name="gps_settings">Open GPS settings</string>
    <string name="internet_settings">Open network settings</string>

    <!--login, register start-->
    <string name="email_missing">Enter email address!</string>
    <string name="email_invalid">Not a valid email. Please check!</string>
    <string name="email_not_verified">Please verify your email address before proceeding.</string>
    <string name="password_missing">Enter password!</string>
    <string name="login_failed">Login failed! Please check your email or password!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password_msg">We just need your email address to send you the reset instructions.</string>
    <string name="action_settings">Settings</string>
    <string name="password_minimum">The password is to short. Please enter a minimum of 6 characters.</string>
    <string name="login">Login with email</string>
    <string name="facebook_login">  Login with Facebook</string>
    <string name="register">Register</string>
    <string name="password_forgot">Forgot password?</string>
    <string name="password_not_matching">Passwords do not match</string>
    <string name="resetPassword">Reset password</string>
    <string name="email_reset_sent">Please check your email. We will send you the reset instructions.</string>
    <string name="email_reset_sent_error">We could not send you the email. Please try again later.</string>
    <string name="password_repeat">Repeat password</string>
    <!--login, register end-->

    <!--popups start-->
    <string name="popup_accuracy_error_title">"Location accuracy"</string>
    <string name="popup_accuracy_text">Please wait while we are locating you…\n\nIf you are inside a building, go to a window or take a few steps outside</string>
    <string name="popup_current_accuracy">Current accuracy:</string>
    <string name="popup_connection_error_title">"You are offline"</string>
    <string name="popup_connection_error_text">Make sure Wi-Fi or cellular data is turned on, then try again.</string>
    <string name="popup_gps_error_title">"No location access"</string>
    <string name="popup_gps_error_text">Please turn on your GPS so we can locate you on the map.</string>
    <string name="popup_location_permission_error_title">"Allow location permissions"</string>
    <string name="popup_location_permission_error_text">The app needs your location to search for nearby shops.</string>
    <string name="popup_shop_limit_error_title">"Limit reached"</string>
    <string name="popup_shop_limit_error_text">You have reached your daily add limit. Come back again tomorrow to add more shops.</string>
    <string name="popup_close">Close</string>
    <!--popups end-->

    <!--add shop start-->
    <string name="popup_add_shop_title">Add shop</string>
    <string name="popup_add_shop_type">Shop type</string>
    <string name="popup_add_shop_type_error">Please select shop type</string>
    <string name="popup_add_shop_small">Small shop</string>
    <string name="popup_add_gas_station">Gas station</string>
    <string name="popup_add_shop_farmer">Farmer\'s market</string>
    <string name="popup_add_shop_supermarket">Supermarket</string>
    <string name="popup_add_shop_shopping_center">Shopping center</string>
    <string name="popup_add_shop_hypermarket">Hypermarket</string>
    <string name="popup_add_shop_button_add">Add</string>
    <string name="popup_add_shop_button_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="checkbox_pos">POS</string>
    <string name="checkbox_tickets">meal tickets</string>
    <string name="checkbox_nonstop">24/7</string>
    <string name="thanks_adding_title">Thanks</string>
    <string name="thanks_adding_text">Thank you for your contribution! The shop has been added to the map</string>
    <!--add shop end-->

    <!--these are the labels that are saved in the Firebase DB, careful when changing these-->
    <string name="db_add_shop_small">Small shop</string>
    <string name="db_add_gas_station">Gas station</string>
    <string name="db_add_shop_farmer">Farmer\'s market</string>
    <string name="db_add_shop_supermarket">Supermarket</string>
    <string name="db_add_shop_shopping_center">Shopping center</string>
    <string name="db_add_shop_hypermarket">Shopping center</string>

    <!--shop details start-->
    <string name="shop_type">Shop type</string>
    <string name="pos">Credit cards accepted</string>
    <string name="cash_only">Cash only</string>
    <string name="tickets">Meal tickets accepted</string>
    <string name="nonstop">24/7</string>
    <string name="report">Report</string>
    <string name="navigate">Navigate</string>
    <!--shop details end-->

    <!--report shop start-->
    <string name="popup_report_shop_title">Report shop</string>
    <string name="popup_report_question">What would you like to report?</string>
    <string name="popup_report_location">The shop is not here</string>
    <string name="popup_report_247_yes">The shop is open 24/7</string>
    <string name="popup_report_247_no">The shop is not open 24/7</string>
    <string name="popup_report_credit_card_yes">Credit cards are accepted</string>
    <string name="popup_report_credit_card_no">Credit cards are not accepted</string>
    <string name="popup_report_tickets_yes">Meal tickets are accepted</string>
    <string name="popup_report_tickets_no">Meal tickets are not accepted</string>
    <string name="popup_report_limit_error_title">"Limit reached"</string>
    <string name="popup_report_limit_error_text">You have reached your daily report limit.</string>
    <string name="thanks_report">Thank you!</string>
    <string name="details_report">Your report has been submitted!</string>
    <!--report shop end-->

    <!--navigation drawer start-->
    <string name="tutorial">Tutorial</string>
    <string name="share">Share</string>
    <string name="send_feedback">Contact us</string>
    <string name="signout">Logout</string>
    <string name="sign_in">Sign in</string>
    <string name="send_feedback_hint">Please enter any comments, questions, suggestions or feedback…</string>
    <string name="feedback_empty">You did not enter any text.</string>
    <string name="feedback_sent">Thank you! Your feedback is important to us</string>
    <string name="share_text">Hey! I found this super cool Android app that shows you all shops around you : https://play.google.com/store/apps/details?id=cazimir.com.magazoo. Download now and start discovering!</string>
    <string name="share_via">Share with</string>
    <!--navigation drawer end-->

    <!--tutorial start-->
    <string name="tutorial_welcome_title">Welcome!</string>
    <string name="tutorial_welcome_text">With Magazoo you can find small shops, farmer\'s markets, supermarkets and shopping centers, all within reach!</string>
    <string name="tutorial_add_shop_title">Add shops</string>
    <string name="tutorial_add_shop_text">Do you know a shop that is not on the map? \n Add it in 2 simple steps, this way you will contribute to the Magazoo community!</string>
    <string name="tutorial_shop_type_title">Type of shops</string>
    <string name="tutorial_shop_type_text">Choose whatever shop you like: small shops, farmer\'s markets, supermarkets and shopping centers.</string>
    <string name="tutorial_report_shop_title">Report a shop</string>
    <string name="tutorial_report_shop_text">Help the Magazoo community maintain an accurate database of available shops by actively contributing. Report non-existent shops or wrong shop properties with 1 click.</string>
    <string name="tutorial_navigate_title">Navigate</string>
    <string name="tutorial_navigate_text">Magazoo locates you on the map and immediately shows you the shortest route to your favourite shop.</string>
    <string name="about">About</string>
    <string name="popup_add_shop_text">This shop will be added at your current location</string>
    <string name="application_version">"Application version is: "</string>
    <string name="developed_by">"Developed by: "</string>
    <string name="last_update">"Last update: "</string>
    <!--tutorial end-->

</resources>
