<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/popup_add_shop_text"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        tools:ignore="RtlSymmetry" />

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spinner_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:ms_hint="@string/popup_add_shop_type" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkPos"
            android:layout_weight="0.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_pos" />

        <CheckBox
            android:id="@+id/checkTickets"
            android:layout_weight="0.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_tickets" />

        <CheckBox
            android:id="@+id/checkNonstop"
            android:layout_weight="0.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_nonstop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="end"
        android:orientation="horizontal">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            app:roundedCorners="true"
            app:bootstrapSize="xl"
            app:fontAwesomeIcon="fa_check_circle"
            app:showOutline="true"
            tools:text="add"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</LinearLayout>