<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/shop_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/shop" />

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="0.3"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/shop_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/nonstop_label"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nonstop" />

            <TextView
                android:id="@+id/pos_label"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pos" />

            <TextView
                android:id="@+id/tickets_label"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkbox_tickets" />


        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:src="@drawable/navigation"
            android:background="@null" />

    </LinearLayout>

</RelativeLayout>