<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include
        android:id="@+id/include_app_bar"
        layout="@layout/app_bar_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView style="@style/logo" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/forgot_password_msg"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/etEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                app:bootstrapSize="lg"
                app:roundedCorners="true" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnForgotPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/resetPassword"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>