<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include
        android:id="@+id/include_app_bar"
        layout="@layout/app_bar_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView style="@style/logo" />

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/etEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    app:bootstrapSize="lg"
                    app:roundedCorners="true" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/etPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    app:bootstrapSize="lg"
                    app:roundedCorners="true" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/etPasswordConfirm"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/password_repeat"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    app:bootstrapSize="lg"
                    app:roundedCorners="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:id="@+id/btnRegisterWithEmail"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/register"
                        app:bootstrapSize="lg"
                        app:buttonMode="regular"
                        app:roundedCorners="true" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>